# controllers/feature_controller.go
@@ -8,6 +8,15 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GET /features
+// Get all features
+// @Summary      Show all features
+// @Description  Get all features
+// @Tags         features
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  map[string]interface{}
+// @Router       /features [get]
 func FindFeatures(c *gin.Context) {
 	var features []models.Feature
 	config.DB.Find(&features)
@@ -15,6 +24,16 @@ func FindFeatures(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"data": features})
 }
 
+// POST /features
+// Create new feature
+// @Summary      Create a new feature
+// @Description  Create a new feature
+// @Tags         features
+// @Accept       json
+// @Produce      json
+// @Param        feature  body      models.Feature  true  "Feature"
+// @Success      200      {object}  models.Feature
+// @Router       /features [post]
 func CreateFeature(c *gin.Context) {
 	var input models.Feature
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -34,4 +53,3 @@ func CreateFeature(c *gin.Context) {
 
 	c.JSON(http.StatusOK, gin.H{"data": feature})
 }
-
